Aggiunte section e formattazione

--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
     </head>
 
     <body>
-        <img src = "https://avatars.githubusercontent.com/u/177259602?v=4" align = right>
-        <h1>Gabriele Guastella</h1>
-        <p>Youtuber & Game Developer<p><br>
-        <p>Currently working with software like Unity & Blender3D <br> 
-        Interested in Cybersecurity and AI
-        </p>
+        <section class = "hero-section">
+         <img src = "https://avatars.githubusercontent.com/u/177259602?v=4" class="rounded-image" align = right>
+        <div class = "center-div">
+            <h1>Gabriele Guastella</h1>
+            <p>Youtuber & Game Developer<p><br>
+            <p>Currently working with software like Unity & Blender3D <br> 
+            Interested in Cybersecurity and AI
+            </p>   
+        </div>
+        </section>
+        
 
     </body>
 
