Aggiunta timeline, sistemata formattazione

--- a/index.html
+++ b/index.html
@@ -19,7 +19,38 @@
             </p>   
         </div>
         </section>
-        
+        <section class = "timeline-section">
+
+           <div class = "center-div">
+               <h1 align = "center">Storyline</h1>        
+               <img src = "https://raw.githubusercontent.com/GabriGua/PPortfolio/refs/heads/main/Resources/My_passion_was_born_here-removebg-preview.png" class="passion-image" align = left>
+
+               <div class="timeline-container">
+                <div class="timeline">
+                  <div class="timeline-point">
+                    <div class="point"></div>
+                    <div class="date">2021</div>
+                    <div class="desc">Started learning Unity<br> Mastered C# for Unity</div>
+                  </div>
+                  <div class="timeline-point">
+                    <div class="point"></div>
+                    <div class="date">2023</div>
+                    <div class="desc">Realeased <a href="https://sgabbsdev.itch.io/spong">Spong</a><br>Started learning Blender</div>
+                  </div>
+                  <div class="timeline-point">
+                    <div class="point"></div>
+                    <div class="date">2024</div>
+                    <div class="desc">Created my YT channel<br>Joined Hack Club</div>
+                  </div>
+                  <div class="timeline-point">
+                    <div class="point"></div>
+                    <div class="date">2025</div>
+                    <div class="desc">Realeased <a href="https://sgabbsdev.itch.io/feathered-fury">Feathered Fury</a><br>Learning Cybersecurity</div>
+                  </div>
+                </div>
+              </div>
+           </div>
+           </section>
 
     </body>
 
