--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Jomhuria&display=swap" rel="stylesheet">
 
-        <title>Mustacchio</title>
+        <title>Mustacchioso</title>
     </head>
 
     <body>
