--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         
         <nav class = "navbar">
-            <svg class="svg-logo" width="70" height="70" viewBox="0 0 85 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="svg-logo"  viewBox="0 0 85 49" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g filter="url(#filter0_d_9_10)">
             <path d="M42.681 2C11.0411 2 5.11748 25.5229 6.09864 38.1121C6.13832 38.6213 6.56808 39 7.07877 39H16.4459C16.8832 39 17.2705 38.716 17.396 38.297C19.7333 30.4913 20.7004 22.1983 28.181 24.5C34.2585 26.37 34.2165 33.0482 34.1853 37.9954L34.1853 38.0004C34.1818 38.5527 34.6288 39 35.181 39H50.2107C51.0854 39 51.8676 38.4326 52.0751 37.5828C53.8055 30.4945 51.2131 26.644 58.181 24.5C64.2786 22.6238 67.7361 32.6277 68.1409 38.0013C68.1824 38.552 68.6288 39 69.181 39H77.7953C78.3009 39 78.728 38.6288 78.7742 38.1253C79.9307 25.5394 74.332 2 42.681 2Z" stroke="black" stroke-width="3" shape-rendering="crispEdges"/>
             </g>
