--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>      
             
             <h1>Hi, I'm Gabriele Guastella</h1>
-            <svg class="svg-job" width="500" height="120" viewBox="0 0 459 113" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="svg-job" viewBox="0 0 459 113" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <defs>
     <filter id="textShadow" x="-50%" y="-50%" width="200%" height="200%">
       <feDropShadow dx="0" dy="0" stdDeviation=10" flood-color= "#7C55A5" flood-opacity="0.7" />
