No pointer events on separetors, vh to dvh

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section class = "hero-section">
         <div class = "center-div">  
             <div class = "image-wrapper">
-                <img src = "https://avatars.githubusercontent.com/u/177259602?v=4" class="rounded-image" align="center" alt="Gabriele Guastella" >
+                <img src = "https://avatars.githubusercontent.com/u/177259602?s=400&u=7ddc07692fd24f3bbed6d9fc75a3a40ef83e0da6&v=4" class="rounded-image" align="center" alt="Gabriele Guastella" >
 
             </div>      
             
